# MyToDoList

./: CMakeLists.txt  TaskClass.dia
app/: CMakeLists.txt  main.cpp
include/: Task.h  ToDoList.h  Tools.h
src/: CMakeLists.txt  Task.cpp  ToDoList.cpp  Tools.cpp
ut/: CMakeLists.txt  project-test.cpp
